crates/compiler/src/tests/e2e/bad/0020_tuple_field_access/main.gom
fn main() -> unit {
  let pair = (1, 2);
  let first = pair.x;
  println(first)
}
